[tool.poetry]
name = "rtorrent-docs"
version = "0.1.0"
description = "\"rTorrent Handbook\" community project"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "rtorrent_docs"}]

[tool.poetry.dependencies]
python = "^3.8"
invoke = "^2.0.0"
sphinx-rtd-theme = "^1.0.0"
sphinx-autobuild = "^2021.3.14"
sphinx = "^6.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
