[tool.poetry]
name = "rtorrent-docs"
version = "0.1.0"
description = "\"rTorrent Handbook\" community project"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false
packages = []

[tool.poetry.dependencies]
python = "^3.8"
invoke = "^2.0.0"
sphinx-autobuild = "^2021.3.14"
sphinx = "^7.0.1"
sphinxcontrib-jquery = "^4.1"
furo = "^2023.5.20"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
